tenzir/tests/lexer/invalid_utf8.tql
// test: lexer
// error: true
"a�b" + 42
